# investor-copilot

./: .gitignore  README.md  example.env  main.py  pyproject.toml
data_cache/: macro_data.csv
openspec/: project.md
openspec/changes/archive/2025-12-29-create-macro-liquidity-analyst/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-29-create-macro-liquidity-analyst/specs/analysis-engine/: spec.md
openspec/changes/archive/2025-12-29-create-macro-liquidity-analyst/specs/dashboard/: spec.md
openspec/changes/archive/2025-12-29-create-macro-liquidity-analyst/specs/data-ingestion/: spec.md
openspec/changes/archive/2025-12-29-create-macro-liquidity-analyst/specs/llm-agent/: spec.md
openspec/changes/archive/2025-12-30-2025-12-30-add-dashboard-charts/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-30-2025-12-30-add-dashboard-charts/specs/dashboard/: spec.md
openspec/changes/archive/2025-12-30-cache-analyst-reports/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-30-implement-i18n-support/: design.md  proposal.md  tasks.md
openspec/specs/analysis-engine/: spec.md
openspec/specs/dashboard/: spec.md
openspec/specs/data-ingestion/: spec.md
openspec/specs/llm-agent/: spec.md
src/analysis/: engine.py
src/data/: fred_client.py  loader.py  market_client.py
src/llm/: analyst.py  report_manager.py
src/ui/: app.py
src/utils/: i18n.py
tests/: test_analyst_i18n.py  test_engine.py  test_i18n.py  test_report_manager.py
(+5 files in other folders)
